[gd_scene load_steps=23 format=2]

[ext_resource path="res://src/environment/ground/ground.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/gui/pause_layer/pause_layer.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/environment/moving_platform/moving_platform.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/jm_pp_outlines/jm_pp_outlines_camera.gd" type="Script" id=5]
[ext_resource path="res://src/environment/static_platform/static_platform.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/shaders/random_glitches.shader" type="Shader" id=7]
[ext_resource path="res://src/levels/level_1/level_1.gd" type="Script" id=8]
[ext_resource path="res://src/gui/win_game_layer/win_game_layer.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/gui/game_over_screen/game_over_screen.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/levels/level_1/level_1.tres" type="Environment" id=11]
[ext_resource path="res://src/environment/spring/spring.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/music/Super_Game_Music_-_A_Walk_in_the_Park_(Loop).ogg" type="AudioStream" id=13]
[ext_resource path="res://src/environment/collectables/colorful_star/colorful_star.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/gui/collected_stars_info/collected_stars_info.tscn" type="PackedScene" id=15]

[sub_resource type="BoxShape" id=1]

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.25, 0.25, 0.25 )

[sub_resource type="PrismMesh" id=6]

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 7 )
shader_param/speed = 0.6
shader_param/ring_scale = 4.4
shader_param/wave_scale = 8.454
shader_param/random_scale = 4.6
shader_param/noise_scale = 0.03

[sub_resource type="CubeMesh" id=2]
size = Vector3( 5, 5, 0.2 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0, 0.509804, 0.956863, 1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 2.5, 2.5, 0.1 )

[node name="Level1" type="Spatial"]
script = ExtResource( 8 )

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.47998, 4.18251 )
collision_mask = 2

[node name="PPOutlinesCamera" type="Camera" parent="Player"]
transform = Transform( 0.686231, -0.243767, 0.685321, -0.437283, 0.614654, 0.656494, -0.581267, -0.750186, 0.315199, 4.54974, 15.9972, 9.50401 )
cull_mask = 524287
script = ExtResource( 5 )
depth_threshold = 1.0
edge_threshold = 0.2
edge_alpha_multiplier = 10.0
depth_use_laplace = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 11 )

[node name="GlobalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 102.381, -110.774 )
light_energy = 0.9
shadow_enabled = true
directional_shadow_bias_split_scale = 0.0
directional_shadow_max_distance = 300.0

[node name="DyingTrigger" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.30069, -205.875 )
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="DyingTrigger"]
transform = Transform( 896.266, 0, 0, 0, 1, 0, 0, 0, 896.266, 0, -57.0031, 110.372 )
shape = SubResource( 1 )

[node name="PortalTrigger" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0344, 5.39477, -240.678 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="PortalTrigger"]
transform = Transform( 22.5913, 0, 0, 0, 18.0731, 0, 0, 0, 1.25507, 0, 0, 0 )
shape = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="PortalTrigger"]
transform = Transform( 5.4, 0, 0, 0, 4.32, 0, 0, 0, 0.3, 0, 0, 0 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -20.0

[node name="Springs" type="Spatial" parent="."]

[node name="Spring1" parent="Springs" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.12322, 1.72832, -216.204 )

[node name="Spring2" parent="Springs" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.7519, -20.9326, -168.034 )

[node name="Spring3" parent="Springs" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.9811, -13.4274, -100.458 )

[node name="Collectables" type="Spatial" parent="."]

[node name="ColorfulStar" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.6919, -11.306, -123.782 )

[node name="ColorfulStar2" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.6917, -11.306, -123.782 )

[node name="ColorfulStar3" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.6917, -11.306, -123.782 )

[node name="ColorfulStar4" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.6919, -11.306, -119.782 )

[node name="ColorfulStar5" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.6917, -11.306, -119.782 )

[node name="ColorfulStar6" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.6917, -11.306, -119.782 )

[node name="ColorfulStar7" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.6919, -11.306, -115.782 )

[node name="ColorfulStar8" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.6917, -11.306, -115.782 )

[node name="ColorfulStar9" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.6917, -11.306, -115.782 )

[node name="ColorfulStar10" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.6919, -11.306, -111.782 )

[node name="ColorfulStar11" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.6917, -11.306, -111.782 )

[node name="ColorfulStar12" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.6917, -11.306, -111.782 )

[node name="ColorfulStar13" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.6919, -11.306, -107.782 )

[node name="ColorfulStar14" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.6917, -11.306, -107.782 )

[node name="ColorfulStar15" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.6917, -11.306, -107.782 )

[node name="ColorfulStar16" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.6919, -11.306, -103.782 )

[node name="ColorfulStar17" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.6917, -11.306, -103.782 )

[node name="ColorfulStar18" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.6917, -11.306, -103.782 )

[node name="ColorfulStar19" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.6919, -11.306, -99.782 )

[node name="ColorfulStar20" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.6917, -11.306, -99.782 )

[node name="ColorfulStar21" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.6917, -11.306, -99.782 )

[node name="ColorfulStar22" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.6917, -11.306, -123.782 )

[node name="ColorfulStar23" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.6917, -11.306, -119.782 )

[node name="ColorfulStar24" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.6917, -11.306, -115.782 )

[node name="ColorfulStar25" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.6917, -11.306, -111.782 )

[node name="ColorfulStar26" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.6917, -11.306, -107.782 )

[node name="ColorfulStar27" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.6917, -11.306, -103.782 )

[node name="ColorfulStar28" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.6917, -11.306, -99.782 )

[node name="ColorfulStar45" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -104.681, 4.96061, -131.607 )

[node name="ColorfulStar46" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -108.681, 4.96061, -131.607 )

[node name="ColorfulStar47" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -112.681, 4.96061, -131.607 )

[node name="ColorfulStar48" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -104.681, 4.96061, -127.607 )

[node name="ColorfulStar49" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -108.681, 4.96061, -127.607 )

[node name="ColorfulStar50" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -112.681, 4.96061, -127.607 )

[node name="ColorfulStar51" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -104.681, 4.96061, -123.607 )

[node name="ColorfulStar52" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -108.681, 4.96061, -123.607 )

[node name="ColorfulStar53" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -112.681, 4.96061, -123.607 )

[node name="ColorfulStar54" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -104.681, 4.96061, -119.607 )

[node name="ColorfulStar55" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -108.681, 4.96061, -119.607 )

[node name="ColorfulStar56" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -112.681, 4.96061, -119.607 )

[node name="ColorfulStar57" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -104.681, 4.96061, -115.607 )

[node name="ColorfulStar58" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -108.681, 4.96061, -115.607 )

[node name="ColorfulStar59" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -112.681, 4.96061, -115.607 )

[node name="ColorfulStar60" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -104.681, 4.96061, -111.607 )

[node name="ColorfulStar61" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -108.681, 4.96061, -111.607 )

[node name="ColorfulStar62" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -112.681, 4.96061, -111.607 )

[node name="ColorfulStar63" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -104.681, 4.96061, -107.607 )

[node name="ColorfulStar64" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -108.681, 4.96061, -107.607 )

[node name="ColorfulStar65" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -112.681, 4.96061, -107.607 )

[node name="ColorfulStar66" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -116.681, 4.96061, -131.607 )

[node name="ColorfulStar67" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -116.681, 4.96061, -127.607 )

[node name="ColorfulStar68" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -116.681, 4.96061, -123.607 )

[node name="ColorfulStar69" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -116.681, 4.96061, -119.607 )

[node name="ColorfulStar70" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -116.681, 4.96061, -115.607 )

[node name="ColorfulStar71" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -116.681, 4.96061, -111.607 )

[node name="ColorfulStar72" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -116.681, 4.96061, -107.607 )

[node name="ColorfulStar29" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.6253, -17.1941, -167.889 )

[node name="ColorfulStar30" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.625, -13.193, -167.889 )

[node name="ColorfulStar31" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.625, -9.193, -167.889 )

[node name="ColorfulStar32" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.625, -5.193, -167.889 )

[node name="ColorfulStar33" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.625, -1.193, -167.889 )

[node name="ColorfulStar34" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.625, 2.807, -167.889 )

[node name="ColorfulStar35" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.625, 6.807, -167.889 )

[node name="ColorfulStar36" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.625, 10.807, -167.889 )

[node name="ColorfulStar37" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23, 2, 24 )

[node name="ColorfulStar38" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19, 2, 24 )

[node name="ColorfulStar39" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 2, 24 )

[node name="ColorfulStar40" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11, 2, 24 )

[node name="ColorfulStar41" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23, 2, 28 )

[node name="ColorfulStar42" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19, 2, 28 )

[node name="ColorfulStar43" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 2, 28 )

[node name="ColorfulStar44" parent="Collectables" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11, 2, 28 )

[node name="Platforms" type="Spatial" parent="."]

[node name="MovingPlatform" parent="Platforms" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.17698, -81.8578 )

[node name="Static" type="Spatial" parent="Platforms"]

[node name="Platform" parent="Platforms/Static" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 1, -4.37114e-08, 2.98023e-08, -4.37114e-08, -1, -1, -4.37114e-08, -2.98023e-08, -27.9754, -20.7237, -227.697 )

[node name="Platform2" parent="Platforms/Static" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 1, -4.37114e-08, 2.98023e-08, -4.37114e-08, -1, -1, -4.37114e-08, -2.98023e-08, -17.0284, -20.7237, -235.931 )

[node name="Platform3" parent="Platforms/Static" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 1, -4.37114e-08, 2.98023e-08, -4.37114e-08, -1, -1, -4.37114e-08, -2.98023e-08, -4.77099, -17.9806, -235.931 )

[node name="Platform4" parent="Platforms/Static" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 1, -4.37114e-08, 2.98023e-08, -4.37114e-08, -1, -1, -4.37114e-08, -2.98023e-08, 3.84436, -15.412, -243.241 )

[node name="Platform5" parent="Platforms/Static" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 1, -4.37114e-08, 2.98023e-08, -4.37114e-08, -1, -1, -4.37114e-08, -2.98023e-08, 12.9839, -10.9007, -235.672 )

[node name="Platform6" parent="Platforms/Static" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 1, -4.37114e-08, 2.98023e-08, -4.37114e-08, -1, -1, -4.37114e-08, -2.98023e-08, 19.4529, -7.14057, -229.136 )

[node name="Platform7" parent="Platforms/Static" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 1, -4.37114e-08, 2.98023e-08, -4.37114e-08, -1, -1, -4.37114e-08, -2.98023e-08, 26.4941, -4.21511, -224.348 )

[node name="Platform8" type="KinematicBody" parent="Platforms/Static"]
transform = Transform( -2.36042e-07, 5.4, -2.36042e-07, 2.98023e-08, -4.37114e-08, -1, -1, -4.37114e-08, -2.98023e-08, 15.6883, 0.766208, -216.392 )
collision_layer = 2

[node name="Mesh" type="MeshInstance" parent="Platforms/Static/Platform8"]
transform = Transform( 1, 0, 0, 0, 1, 1.3027e-15, -3.55271e-15, 1.3027e-15, 1, 0, 0, 0 )
mesh = SubResource( 2 )
skeleton = NodePath("../../../../..")
material/0 = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Platforms/Static/Platform8"]
shape = SubResource( 4 )

[node name="Platform9" type="KinematicBody" parent="Platforms/Static"]
transform = Transform( -1, 1.19209e-07, -2.98023e-08, 2.98023e-08, -4.37114e-08, -1, 2.08616e-07, -5.4, 2.36042e-07, -0.31172, 0.766208, -227.392 )
collision_layer = 2

[node name="Mesh" type="MeshInstance" parent="Platforms/Static/Platform9"]
mesh = SubResource( 2 )
skeleton = NodePath("../../../../..")
material/0 = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Platforms/Static/Platform9"]
shape = SubResource( 4 )

[node name="Grounds" type="Spatial" parent="."]

[node name="Ground" parent="Grounds" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.1324, 0 )

[node name="Ground2" parent="Grounds" instance=ExtResource( 1 )]
transform = Transform( 1.0001, 0, 0, 0, 1.0001, 0, 0, 0, 1.0001, -0.0503519, -15.5644, -102.102 )

[node name="Ground3" parent="Grounds" instance=ExtResource( 1 )]
transform = Transform( 1.0001, 0, 0, 0, 1.0001, 0, 0, 0, 1.0001, -0.0503519, -23.1726, -189.776 )

[node name="Ground4" parent="Grounds" instance=ExtResource( 1 )]
transform = Transform( 1.0001, 0, 0, 0, 1.0001, 0, 0, 0, 1.0001, -93.5475, 0.222267, -107.847 )

[node name="Screens" type="Node" parent="."]

[node name="PauseScreen" parent="Screens" instance=ExtResource( 3 )]

[node name="WinGameScreen" parent="Screens" instance=ExtResource( 9 )]

[node name="GameOverScreen" parent="Screens" instance=ExtResource( 10 )]

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
margin_bottom = 119.0
mouse_filter = 2

[node name="CollectedStarsInfo" parent="HUD" instance=ExtResource( 15 )]
margin_top = -80.0
margin_bottom = 0.0

[connection signal="body_entered" from="DyingTrigger" to="." method="_on_DyingTrigger_body_entered"]
[connection signal="body_entered" from="PortalTrigger" to="." method="_on_PortalTrigger_body_entered"]
